# go2_rl

./: .gitignore  ReadMe.md
livox/livox_laser_simulation/: CMakeLists.txt  package.xml
livox/livox_laser_simulation/include/livox_laser_simulation/: livox_points_plugin.h
livox/livox_laser_simulation/launch/: livox_simulation.launch
livox/livox_laser_simulation/src/: livox_points_plugin.cpp
livox/livox_laser_simulation/urdf/: livox_mid360.xacro  livox_mid360_standalone.xacro  mid360_IMU_platform.xacro
realsense_ros_gazebo/: CMakeLists.txt  README.md
realsense_ros_gazebo/include/realsense_gazebo_plugin/: gazebo_ros_realsense.h
realsense_ros_gazebo/sdf/iris_hil/: iris_hil_add_baro.sdf
realsense_ros_gazebo/src/: gazebo_ros_realsense.cpp
realsense_ros_gazebo/xacro/: depthcam.xacro
rl_sar/: README.md  README_CN.md
rl_sar/policy/go2/go2_handstand/: config.yaml  policy_1.pt
rl_sar/policy/go2/go2_jump/: config.yaml  policy_1.pt
rl_sar/policy/go2/go2_stairs/: config.yaml  policy_1.pt
rl_sar/policy/go2/go2_trot/: config.yaml  policy_1.pt
rl_sar/policy/go2/himloco/: config.yaml  policy.pt
rl_sar/scripts/: download_robot_descriptions.sh
rl_sar/src/rl_sar/: CMakeLists.txt  package.ros1.xml
rl_sar/src/rl_sar/env-hooks/: 50-rl_sar_zoo.sh.in  50.rl_sar_zoo.bash.in  50.rl_sar_zoo.zsh.in
rl_sar/src/rl_sar/fsm_robot/: fsm_all.hpp  fsm_go1.hpp  fsm_go2.hpp
rl_sar/src/rl_sar/include/: rl_real_go1.hpp  rl_real_go2.hpp
rl_sar/src/rl_sar/launch/: gazebo.launch
rl_sar/src/rl_sar/src/: gazebo_high_state_bridge.cpp  rl_real_go1.cpp
rl_sar/src/rl_sar/src/plugins/: draw_force_plugin.cc  foot_contact_plugin.cc
rl_sar/src/rl_sar/worlds/: outdoor.world
slam/FAST_LIO/config/: go2_mid360_sim.yaml
slam/FAST_LIO/launch/: mapping_go2_mid360.launch
slam/FAST_LIO/rviz_cfg/: loam_livox.rviz
slam/FAST_LIO/scripts/: imu_logger.py
slam/FAST_LIO/src/: laserMapping.cpp  preprocess.cpp
slam/Leg-KILO/: Leg-KILO_Robust_Kinematic-Inertial-Lidar_Odometry_for_Dynamic_Legged_Robots_MinerU__20251019065258.md
slam/Leg-KILO/legkilo/: CMakeLists.txt  package.xml
slam/Leg-KILO/legkilo/config/: leg_fusion.yaml
slam/Leg-KILO/legkilo/launch/: leg_fusion.launch
slam/Leg-KILO/legkilo/rviz/: legkilo_robot.rviz
slam/Leg-KILO/unitree_legged_msgs/: CMakeLists.txt
slam/Point-LIO/config/: go1_mid360_sim.yaml  go2_mid360_sim.yaml
slam/Point-LIO/launch/: mapping_go1_mid360_sim.launch  mapping_go2_mid360_elevation.launch  mapping_go2_mid360_sim.launch
slam/Point-LIO/rviz_cfg/: loam_livox.rviz
slam/Point-LIO/src/: laserMapping.cpp  parameters.cpp  parameters.h  preprocess.cpp
thethird/livox/livox_laser_simulation/launch/: mid360_IMU_platform.launch
thethird/livox/livox_laser_simulation/urdf/: livox_mid360.xacro  mid360_IMU_platform.xacro  mid360_IMU_platform_standalone.xacro
thethird/velodyne_description/: CMakeLists.txt
thethird/velodyne_description/urdf/: VLP-16.urdf.xacro
thethird/velodyne_gazebo_plugins/: CMakeLists.txt
